Use Adventure metadata in Mineralized Apiary